fixed :before decoration on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,11 @@ h2 {
         width: 100%;
         margin: 0 0 6rem 0;
     }
+
+    .projects article::before {
+        display: none;
+    }
+    
     /* SERVICES  */
     .services-section-container {
         width: 100%;
